--- a/app/settings.gradle
+++ b/app/settings.gradle
@@ -12,5 +12,5 @@ dependencyResolutionManagement {
         mavenCentral()
     }
 }
-rootProject.name = "Gestor Contraseñas"
+rootProject.name = "Locked and secure"
 include ':app'
