--- a/app/app/build.gradle
+++ b/app/app/build.gradle
@@ -4,12 +4,12 @@ plugins {
 
 android {
     namespace 'com.afundacion.gestorcontrasenas'
-    compileSdk 32
+    compileSdk 33
 
     defaultConfig {
         applicationId "com.afundacion.gestorcontrasenas"
         minSdk 21
-        targetSdk 32
+        targetSdk 33
         versionCode 1
         versionName "1.0"
 
@@ -26,12 +26,24 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+
+    sourceSets {
+        main {
+            res.srcDirs = [
+                    'src/main/res/layouts/login',
+                    'src/main/res/layouts',
+                    'src/main/res'
+            ]
+        }
+    }
 }
+
 
 dependencies {
 
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.9.0'
+    implementation 'com.android.volley:volley:1.2.1'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
