--- a/app/app/build.gradle
+++ b/app/app/build.gradle
@@ -31,6 +31,7 @@ android {
         main {
             res.srcDirs = [
                     'src/main/res/layouts/login',
+                    'src/main/res/layouts/registro',
                     'src/main/res/layouts',
                     'src/main/res'
             ]
