--- a/app/app/src/main/AndroidManifest.xml
+++ b/app/app/src/main/AndroidManifest.xml
@@ -41,6 +41,7 @@
             </intent-filter>
         </activity>
 
+        <activity android:name="com.afundacion.lockedandsecure.registro.Registro"/>
     </application>
 
 </manifest>
