--- a/app/app/build.gradle
+++ b/app/app/build.gradle
@@ -32,6 +32,8 @@ android {
             res.srcDirs = [
                     'src/main/res/layouts/login',
                     'src/main/res/layouts/registro',
+                    'src/main/res/layouts/grupos',
+                    'src/main/res/layouts/inicio',
                     'src/main/res/layouts',
                     'src/main/res'
             ]
@@ -45,6 +47,8 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.9.0'
     implementation 'com.android.volley:volley:1.2.1'
+    implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
+    implementation 'com.facebook.shimmer:shimmer:0.5.0'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
