--- a/app/app/src/main/AndroidManifest.xml
+++ b/app/app/src/main/AndroidManifest.xml
@@ -45,6 +45,7 @@
         <activity android:name="com.afundacion.lockedandsecure.grupos.CrearGrupo"/>
         <activity android:name="com.afundacion.lockedandsecure.inicio.Inicio"/>
         <activity android:name="com.afundacion.lockedandsecure.contrasenas.CrearContraseña"/>
+        <activity android:name="com.afundacion.lockedandsecure.contrasenas.EditarContraseña"/>
     </application>
 
 </manifest>
