--- a/app/app/build.gradle
+++ b/app/app/build.gradle
@@ -36,6 +36,7 @@ android {
                     'src/main/res/layouts/grupos',
                     'src/main/res/layouts/inicio',
                     'src/main/res/layouts/contraseñas',
+                    'src/main/res/layouts/ajustes',
                     'src/main/res/layouts',
                     'src/main/res'
             ]
@@ -54,6 +55,9 @@ dependencies {
     implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
     implementation 'com.facebook.shimmer:shimmer:0.5.0'
     implementation 'androidx.security:security-crypto:1.0.0'
+    implementation "androidx.preference:preference:1.2.0"
+    implementation 'androidx.navigation:navigation-fragment:2.5.3'
+    implementation 'androidx.navigation:navigation-ui:2.5.3'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
