--- a/app/app/src/main/AndroidManifest.xml
+++ b/app/app/src/main/AndroidManifest.xml
@@ -46,6 +46,7 @@
         <activity android:name="com.afundacion.lockedandsecure.inicio.Inicio"/>
         <activity android:name="com.afundacion.lockedandsecure.contrasenas.CrearContraseña"/>
         <activity android:name="com.afundacion.lockedandsecure.contrasenas.EditarContraseña"/>
+        <activity android:name="com.afundacion.lockedandsecure.ajustes.Ajustes"/>
     </application>
 
 </manifest>
