--- a/app/app/src/main/AndroidManifest.xml
+++ b/app/app/src/main/AndroidManifest.xml
@@ -16,22 +16,8 @@
         android:theme="@style/Theme.LockedAndSecure"
         tools:targetApi="31">
 
-        <!--
         <activity
-            android:name=".MainActivity"
-            android:theme="@style/SplashScreen"
-            android:exported="true"
-            android:screenOrientation="portrait">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-        -->
-
-        <activity
-            android:name="com.afundacion.lockedandsecure.login.Login"
+            android:name="com.afundacion.lockedandsecure.launcher.Launcher"
             android:exported="true"
             android:screenOrientation="portrait">
             <intent-filter>
@@ -41,6 +27,7 @@
             </intent-filter>
         </activity>
 
+        <activity android:name="com.afundacion.lockedandsecure.login.Login"/>
         <activity android:name="com.afundacion.lockedandsecure.registro.Registro"/>
         <activity android:name="com.afundacion.lockedandsecure.grupos.CrearGrupo"/>
         <activity android:name="com.afundacion.lockedandsecure.inicio.Inicio"/>
